--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -205,13 +205,18 @@ section {
     display: block;
     background-color: #fff;
     padding: 7px 16px;
-    margin: 5px;
+    margin: 5px 24px;
     border-radius: 8px;
+}
+.informasi:hover{
+    background-color: rgb(245, 245, 245);
+    transition: 0.3s;
+    text-decoration: none;
 }
 .informasi span{    
     position: absolute;
     top: 10px;
-    right: 20px;
+    right: 38px;
     color: #fff;
     padding: 2px 20px;
     font-size: 14px;
@@ -255,6 +260,71 @@ section {
     padding: 16px 0;
     border-radius: 30px;
 }
+.btn-pedoman:hover{
+    text-decoration: none;
+    background-color: #09242c;
+    color: #fff;
+    transition: 0.3s;
+}
+
+/* TEASER */
+.teaser{
+    background-image: url('/assets/images/bg-section2.svg');
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+
+.teaser iframe{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; 
+    height: 400px;
+    z-index: 4;
+}
+
+.teaser .hero1{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 400px;  
+    z-index: 1;  
+}
+
+.teaser .hero2{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 400px;  
+    z-index: 1;  
+}
+/* TIMELINE */
+.timeline{
+    background-image: url('/assets/images/bg-section3.svg');
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: bottom;
+}
+
+/* FOOTER */
+.footer{
+    background-image: url('/assets/images/bg-section4.svg');
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: bottom;
+}
+.footer .logo{
+    width: 100%;
+}
+.footer i{
+    margin-right: 8px;
+}
+.footer a{
+    color: #fff;
+    margin-right: 14px;
+}
+.footer a:hover{
+    text-decoration: none;
+}
 /* Responsive */
 
  /* Extra small devices (portrait phones, less than 576px) */
@@ -288,6 +358,32 @@ section {
         width: fit-content;
         margin: auto;
         margin-bottom: 20px;
+    }
+    /* PEDOMAN INFO */
+    .pedoman .hero{
+        width: 50%;        
+    }
+    .btn-pedoman{        
+        width: 70%;                        
+        font-size: 14px;
+        padding: 7px 0;   
+        margin-bottom: 10px;     
+    }
+    .informasi {
+        margin: 5px 0;
+    }
+    .informasi span{    
+        position: sticky;        
+        color: #fff;
+        padding: 2px 20px;
+        font-size: 14px;        
+    }
+    /* TEASER */
+    .teaser iframe{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%; 
+        height: 250px;
     }
 } 
 
@@ -323,6 +419,20 @@ section {
         margin: auto;
         margin-bottom: 20px;
     }
+    /* PEDOMAN INFO */
+    .pedoman .hero{
+        width: 45%;        
+    }
+    .btn-pedoman{        
+        width: 70%;                        
+        font-size: 14px;
+        padding: 7px 0;   
+        margin-bottom: 10px;     
+    }
+    .informasi {
+        margin: 5px 0;
+    }
+    
 }
 
  /* Medium devices (tablets, 768px and up) */
@@ -344,6 +454,19 @@ section {
     }
     .info{
         height: 50%;
+    }
+    /* PEDOMAN INFO */
+    .pedoman .hero{
+        width: 45%;        
+    }
+    .btn-pedoman{        
+        width: 70%;                        
+        font-size: 14px;
+        padding: 7px 0;   
+        margin-bottom: 10px;     
+    }
+    .informasi {
+        margin: 5px 0;
     }
 }
 
