--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -291,7 +291,7 @@ section {
     margin-right: auto;
     width: 100%; 
     height: 400px;
-    z-index: 4;
+    z-index: 1;
 }
 
 .teaser .hero1{
@@ -299,7 +299,7 @@ section {
     left: 0;
     bottom: 0;
     width: 400px;  
-    z-index: 1;  
+    z-index: 0;  
 }
 
 .teaser .hero2{
@@ -307,7 +307,7 @@ section {
     right: 0;
     bottom: 0;
     width: 400px;  
-    z-index: 1;  
+    z-index: 0;  
 }
 /* TIMELINE */
 .timeline{
@@ -429,6 +429,11 @@ section {
         width: 100%; 
         height: 250px;
     }
+    .teaser .hero1, .teaser .hero2{        
+        width: 200px;  
+        z-index: 0;  
+    }
+        
     /* BIDANG DETAIL */
     .bidang-detail{
         padding-top: 28%;
@@ -479,6 +484,10 @@ section {
     }
     .informasi {
         margin: 5px 0;
+    }
+    /* TEASER */
+    .teaser{
+        padding-top:0;
     }
     
 }
